migrate certain parts of the code to use Java 17 features